Configuração do dotenv e conexão com MongoDB corrigida  03

--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@ const API_BASE = 'http://localhost:3000';
     
     const API_BASE = 'https://youtube-lives.onrender.com';
     // === CONFIGURAÇÕES ===
-    const SIGNALING_SERVER = 'ws://youtube-lives.onrender.com';
+    const SIGNALING_SERVER = 'wss://youtube-lives.onrender.com';
    // let socket = null;
     let salaAtual = null;
     let salasDisponiveis = {};
